# melodix

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
boondle/: .gitignore  README.md  compile.sh  package.sh  project.json
src/: app.rs  layout.rs  library.rs  main.rs  script.rs  setting.rs  system.rs  window.rs
src/lua/: main.lua  meta.lua
src/module/discord/: Cargo.toml  main.lua
src/module/discord/src/: lib.rs
src/module/last-fm/: Cargo.toml  main.lua
src/module/last-fm/src/: lib.rs
src/side/discord/: Cargo.toml  main.lua  move.sh
src/side/discord/src/: lib.rs
