[package]
name    = "melodix"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level     = 3
codegen-units = 1
lto           = "fat"

[dependencies]
#================================================================
# core.
#================================================================
# lua.
mlua        = { version = "0.10.5", features = ["lua54", "vendored", "send", "serialize"] }
# egui.
eframe      = { version = "0.31.1"                               }
egui-toast  = { version = "0.17.0"                               }
egui_extras = { version = "0.31.1", features = ["file", "image"] }
image       = { version = "0.25.6", features = ["jpeg", "png"]   }
# serialization/deserialization.
postcard    = { version = "1.0.0",  features = ["alloc"]  }
serde       = { version = "1.0",    features = ["derive"] }
# multi-thread library scan.
rayon       = { version = "1.10" }
# generic error converter.
anyhow      = { version = "1.0.98" }

#================================================================
# audio play-back/meta-data.
#================================================================
# audio play-back.
rodio        = { version = "0.20.1", features = ["flac", "minimp3", "vorbis", "wav"] , default-features = false }
# MP3 duration, due to minimp3 never being able to retrieve it, and symphonia failing ocasionally to do so.
mp3-duration = { version = "0.1.10" }
# audio meta-data.
symphonia    = { version = "0.5.4",  features = ["all", "opt-simd"] }

#================================================================
# miscellaneous system utility.
#================================================================
# push notification.
notify-rust = { version = "4.11.7", features = ["images"] }
# tray icon.
tray-icon   = { version = "0.20.1" }
gtk         = { version = "0.18.2" }
# multi-media key event.
souvlaki    = { version = "0.8.2" }
# folder picker.
rfd         = { version = "0.15.3" }
# recursive folder scan.
walkdir     = { version = "2" }
rand = "0.9.1"
m3u = "1.0.0"