[package]
name    = "melodix"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = "none"

# dependency list:
# sudo apt install libgtk-3-dev libxdo-dev libayatana-appindicator3-dev

[profile.dev]
debug = 0

[dependencies]
mlua              = { version = "0.10.5", features = ["lua54", "vendored", "send", "serialize"] }
eframe            = { version = "0.33.2"                               }
egui-toast        = { git = "https://github.com/LazerSharkk/egui-toast", branch = "main" }
egui_extras       = { version = "0.33.2", features = ["file", "image", "svg"] }
image             = { version = "0.25.6", features = ["jpeg", "png"]   }
postcard          = { version = "1.0.0",  features = ["alloc"]  }
serde             = { version = "1.0",    features = ["derive"] }
rayon             = { version = "1.10" }
anyhow            = { version = "1.0.98" }
rodio             = { version = "0.21.1" }
mp3-duration      = { version = "0.1.10" }
symphonia         = { version = "0.5.4",  features = ["all", "opt-simd"] }
notify-rust       = { version = "4.11.7", features = ["images"] }
tray-icon         = { version = "0.20.1" }
souvlaki          = { version = "0.8.2" }
rfd               = { version = "0.15.3" }
walkdir           = { version = "2" }
rand              = { version = "0.9.1" }
m3u               = { version = "1.0.0" }
raw-window-handle = { version = "0.6.2" }
opener            = { version = "0.8.2" }
dirs              = { version = "6.0.0" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk         = { version = "0.18.2" }
