[package]
name    = "melodix-last-fm"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = "none"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua             = { version = "0.10.5", features = ["lua54", "module"]                    }
rustfm-scrobble  = { version = "1.1.1" }
postcard         = { version = "1.0.0",  features = ["alloc"]                              }
serde            = { version = "1.0",    features = ["derive"]                             }
dirs             = { version = "6.0.0" }