[package]
name = "melodix-discord"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua             = { version = "0.10.5", features = ["lua54", "module", "async"] }
discord-presence = { version = "1.6",    features = ["activity_type"]            }
postcard         = { version = "1.0.0",  features = ["alloc"]                    }
serde            = { version = "1.0",    features = ["derive"]                   }
musicbrainz_rs   = { version = "0.9.0"                                           }
tokio = { version = "1.45.1", features = ["full"] }
